--- a/p8105_hw5_VK2480.md
+++ b/p8105_hw5_VK2480.md
@@ -337,13 +337,13 @@ t.test(a_sampl)
     ##  One Sample t-test
     ## 
     ## data:  a_sampl
-    ## t = 25.077, df = 29, p-value < 2.2e-16
+    ## t = 24.915, df = 29, p-value < 2.2e-16
     ## alternative hypothesis: true mean is not equal to 0
     ## 95 percent confidence interval:
-    ##  1.959785 2.307839
+    ##  1.893675 2.232374
     ## sample estimates:
     ## mean of x 
-    ##  2.133812
+    ##  2.063025
 
 ``` r
 ## step 2: Generate 5000 simulation datasets with mu=0, using the above function
@@ -402,3 +402,63 @@ power_plot
 
 ![](p8105_hw5_VK2480_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 Thus, we can see that power increases with increase in effect size.
+
+``` r
+# Make a plot showing the average estimate of μ̂  on the y axis and the true value of μ on the x axis.
+plot2_df1 = sim_results_df %>%
+  group_by(mu) %>%
+  summarise(
+    avg_mu = mean(mu_hat)
+  ) %>%
+  mutate(
+    data = "Null hypothesis was not rejected"
+  )
+
+mu_vs_muhat = plot2_df1 %>%
+  ggplot(aes(x = mu, y = avg_mu)) +
+  geom_point() +
+  scale_x_continuous(breaks = seq(0, 6)) +
+  scale_y_continuous(breaks = seq(0, 6, by = 0.5)) +
+  xlab("True Population Mean") +
+  ylab("Average Estimate Mean")
+
+mu_vs_muhat
+```
+
+![](p8105_hw5_VK2480_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+``` r
+# Make a second plot (or overlay on the first) the average estimate of μ̂  only in samples for which the null was rejected on the y axis and the true value of μ on the x axis. 
+
+plot2_df2 = sim_results_df %>%
+  mutate(
+    conclusion = if_else(p_value > 0.05, "Do not reject", "Reject")) %>%
+  filter(conclusion == "Reject") %>%
+  group_by(mu) %>%
+  summarise(
+    avg_mu = mean(mu_hat)
+  ) %>%
+  mutate(
+    data = "Null hypothesis was rejected"
+  )
+
+plot2 = ggplot(data = plot2_df1, aes(x = mu, y = avg_mu, color = data)) + 
+  geom_point() + 
+  geom_point(data = plot2_df2, shape = 23) +
+  scale_x_continuous(breaks = seq(0, 6)) +
+  scale_y_continuous(breaks = seq(0, 6, by = 0.5)) +
+  xlab("True Population Mean") +
+  ylab("Average Estimate Mean")
+
+plot2
+```
+
+![](p8105_hw5_VK2480_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+``` r
+#  Is the sample average of μ̂  across tests for which the null is rejected approximately equal to the true value of μ? Why or why not?
+```
+
+The sample average of μ̂ across tests for which the null is rejected is
+not equal to the true value of μ when μ is low, but it gets closer and
+almost equal to μ as the value of μ increases. WHY???
