--- a/p8105_hw5_VK2480.md
+++ b/p8105_hw5_VK2480.md
@@ -1,4 +1,4 @@
-Homework-2
+Homework-5
 ================
 
 ## Library calls
@@ -15,10 +15,6 @@ library(tidyverse)
     ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
-library(readxl)
-```
 
 ## Problem 1
 
@@ -233,7 +229,10 @@ homicide_df = read_csv("homicide-data.csv") %>%
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-Describe raw data:
+Describe raw data: This dataset contains 52179 rows and 12 variables. It
+provides information about homicides in 50 US cities. Some of the
+important variables in this dataset include: date of homicide, city,
+state, and the state/disposition of the homicide case.
 
 ``` r
 # create city_state variable
@@ -260,22 +259,36 @@ homicide_df = left_join(total_homicides_df, unsolved_homicides_df)
 
 ``` r
 # Prop.test for Baltimore
-baltimore_homicides = homicide_df %>%
-  filter(city == "Baltimore")
 
-balt_prop_test = prop.test(x = baltimore_homicides$unsolved_homicides, n = baltimore_homicides$total_homicides) %>%
-  broom::tidy() %>%
+# create function to return tidy version of prop.test results
+prop_test_results <- function(prop_x, prop_n) {
+  
+  prop_test_list = prop.test(prop_x, prop_n)
+  prop_test_list = broom::tidy(prop_test_list)
+}
+
+balt_prop_test = homicide_df %>%
+  filter(city == "Baltimore") %>%
+  mutate(
+    t_test = prop_test_results(prop_x = unsolved_homicides, prop_n = total_homicides)) %>%
+  unnest(cols = t_test) %>%
   select(estimate, conf.low, conf.high) %>%
   mutate(
     CI = str_c(conf.low, ",", conf.high)
   )
+```
+
+    ## Adding missing grouping variables: `city`
+
+``` r
 balt_prop_test
 ```
 
-    ## # A tibble: 1 × 4
-    ##   estimate conf.low conf.high CI                                 
-    ##      <dbl>    <dbl>     <dbl> <chr>                              
-    ## 1    0.646    0.628     0.663 0.627562457662644,0.663159860401662
+    ## # A tibble: 1 × 5
+    ## # Groups:   city [1]
+    ##   city      estimate conf.low conf.high CI                                 
+    ##   <chr>        <dbl>    <dbl>     <dbl> <chr>                              
+    ## 1 Baltimore    0.646    0.628     0.663 0.627562457662644,0.663159860401662
 
 ``` r
 # Run prop.test for each of the cities in your dataset, and extract both the proportion of unsolved homicides and the confidence interval for each city.
@@ -325,33 +338,17 @@ sim_mean_pvalue = function(mu = 0, sigma = 5, samp_num = 30) {
   sim_data %>% 
     summarize(
       mu_hat = mean(x),
-      p_value = broom::tidy(t.test(x))[[3]],
+      p_value = broom::tidy(t.test(x))[[3]]
     )
 }
 
-a_sampl = rnorm(30, 2, 0.5)
-t.test(a_sampl)
-```
 
-    ## 
-    ##  One Sample t-test
-    ## 
-    ## data:  a_sampl
-    ## t = 24.915, df = 29, p-value < 2.2e-16
-    ## alternative hypothesis: true mean is not equal to 0
-    ## 95 percent confidence interval:
-    ##  1.893675 2.232374
-    ## sample estimates:
-    ## mean of x 
-    ##  2.063025
-
-``` r
 ## step 2: Generate 5000 simulation datasets with mu=0, using the above function
 
 sim0_results_df = 
   expand_grid(
     mu = 0,
-    iter = 1:50
+    iter = 1:5000
   ) %>% 
   mutate(
     estimate_df = map(mu, sim_mean_pvalue)
@@ -364,7 +361,7 @@ sim0_results_df =
 sim_results_df = 
   expand_grid(
     mu = c(1, 2, 3, 4, 5, 6),
-    iter = 1:50
+    iter = 1:5000
   ) %>% 
   mutate(
     estimate_df = map(mu, sim_mean_pvalue)
@@ -461,4 +458,4 @@ plot2
 
 The sample average of μ̂ across tests for which the null is rejected is
 not equal to the true value of μ when μ is low, but it gets closer and
-almost equal to μ as the value of μ increases. WHY???
+almost equal to μ as the value of μ increases.
